Primeiras dependências | configuração do banco h2 para teste | Estrutura de pastas | Criação de Entidade Grupo

--- a/backend/grupos-partidas-apis/src/main/resources/application.properties
+++ b/backend/grupos-partidas-apis/src/main/resources/application.properties
@@ -1,9 +1,12 @@
-spring.jpa.database=POSTGRESQL
-spring.datasource.platform=postgres
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://motty.db.elephantsql.com:5432/jlvxbvle
-spring.datasource.username=jlvxbvle
-spring.datasource.password=k9OLgNF_SGB8ktg7UeE9PH8NgL6fCyc3
-spring.jpa.hibernate.ddl-auto=create
+##H2
+spring.h2.console.enabled=true
 
+##Datasource
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=root
+spring.datasource.password=root
+spring.jpa.database-plataform=org.hibernate.dialect.H2Dialect
 
+##WebServer
+server.servlet.context-path=/api
