--- a/backend/grupos-partidas-apis/pom.xml
+++ b/backend/grupos-partidas-apis/pom.xml
@@ -12,11 +12,15 @@
 	<artifactId>grupos-partidas-apis</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>grupos-partidas-apis</name>
-	<description>APIs de interação com as tabelas grupo e info_grupo</description>
+	<description>APIs de interação com as tabelas grupos, partidas e jogador_grupo</description>
 	<properties>
 		<java.version>17</java.version>
 	</properties>
 	<dependencies>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
@@ -27,11 +31,19 @@
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-hateoas</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-validation</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.data</groupId>
+			<artifactId>spring-data-rest-hal-explorer</artifactId>
 		</dependency>
 
 		<dependency>
@@ -41,8 +53,8 @@
 			<optional>true</optional>
 		</dependency>
 		<dependency>
-			<groupId>org.postgresql</groupId>
-			<artifactId>postgresql</artifactId>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
 			<scope>runtime</scope>
 		</dependency>
 		<dependency>
@@ -72,7 +84,6 @@
 				</configuration>
 			</plugin>
 		</plugins>
-		<defaultGoal>install</defaultGoal>
 	</build>
 
 </project>
