--- a/backend/grupos-partidas-apis/src/main/resources/application.properties
+++ b/backend/grupos-partidas-apis/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=root
 spring.datasource.password=root
-spring.jpa.database-plataform=org.hibernate.dialect.H2Dialect
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 ##WebServer
 server.servlet.context-path=/api
