--- a/backend/grupos-partidas-apis/src/main/resources/application.properties
+++ b/backend/grupos-partidas-apis/src/main/resources/application.properties
@@ -1,12 +1,17 @@
+##POSTGRESQL
+spring.jpa.database=POSTGRESQL
+spring.datasource.platform=postgres
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://motty.db.elephantsql.com:5432/jlvxbvle
+spring.datasource.username=jlvxbvle
+spring.datasource.password=rF9T3gvdx8svG7rtC8YdP7GEGzdScpQ7
+
+
+
 ##H2
-spring.h2.console.enabled=true
-
-##Datasource
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=root
-spring.datasource.password=root
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-
-##WebServer
-server.servlet.context-path=/api
+#spring.h2.console.enabled=true
+#spring.datasource.url=jdbc:h2:mem:testdb
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.username=root
+#spring.datasource.password=root
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
