--- a/backend/grupos-partidas-apis/src/main/resources/application.properties
+++ b/backend/grupos-partidas-apis/src/main/resources/application.properties
@@ -5,8 +5,7 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://motty.db.elephantsql.com:5432/jlvxbvle
 spring.datasource.username=jlvxbvle
 spring.datasource.password=rF9T3gvdx8svG7rtC8YdP7GEGzdScpQ7
-
-
+spring.datasource.maxActive=2
 
 ##H2
 #spring.h2.console.enabled=true
