Configura API externa com nome de jogador (#77)

--- a/backend/grupos-partidas-apis/src/main/resources/application.properties
+++ b/backend/grupos-partidas-apis/src/main/resources/application.properties
@@ -1,3 +1,6 @@
+# Chave de API do League of Legends
+riot.api.key=RGAPI-93297058-3a2f-4fc2-a962-c2542408f49b
+
 ##POSTGRESQL
 spring.jpa.database=POSTGRESQL
 spring.datasource.platform=postgres
