--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,37 +1,48 @@
 {
-  "name": "frontendgp",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite --port 3000",
-    "build": "tsc && vite build",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "@emotion/react": "^11.10.5",
-    "@emotion/styled": "^11.10.5",
-    "@mui/material": "^5.11.6",
-    "@types/styled-components": "^5.1.26",
-    "axios": "^1.2.3",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-redux": "^8.0.5",
-    "react-router-dom": "^6.7.0",
-    "redux": "^4.2.0",
-    "styled-components": "^5.3.6",
-    "tailwindcss": "^3.2.4"
-  },
-  "devDependencies": {
-    "@types/react": "^18.0.26",
-    "@types/react-dom": "^18.0.9",
-    "@vitejs/plugin-react": "^3.0.0",
-    "autoprefixer": "^10.4.13",
-    "postcss": "^8.4.21",
-    "typescript": "^4.9.3",
-    "vite": "^4.0.0"
-  },
-  "resolutions": {
-    "styled-components": "^5"
-  }
+    "name": "frontendgp",
+    "private": true,
+    "version": "0.0.0",
+    "type": "module",
+    "scripts": {
+        "dev": "vite --port 3000",
+        "build": "tsc && vite build",
+        "preview": "vite preview",
+        "lint": "eslint ."
+    },
+    "dependencies": {
+        "@emotion/react": "^11.10.5",
+        "@emotion/styled": "^11.10.5",
+        "@mui/material": "^5.11.6",
+        "@types/styled-components": "^5.1.26",
+        "axios": "^1.2.3",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "react-redux": "^8.0.5",
+        "react-router-dom": "^6.7.0",
+        "redux": "^4.2.0",
+        "styled-components": "^5.3.6",
+        "tailwindcss": "^3.2.4"
+    },
+    "devDependencies": {
+        "@types/react": "^18.0.26",
+        "@types/react-dom": "^18.0.9",
+        "@typescript-eslint/eslint-plugin": "^5.43.0",
+        "@vitejs/plugin-react": "^3.0.0",
+        "autoprefixer": "^10.4.13",
+        "eslint": "^8.0.1",
+        "eslint-config-prettier": "^8.8.0",
+        "eslint-config-standard-with-typescript": "^34.0.1",
+        "eslint-plugin-import": "^2.25.2",
+        "eslint-plugin-n": "^15.0.0",
+        "eslint-plugin-prettier": "^4.2.1",
+        "eslint-plugin-promise": "^6.0.0",
+        "eslint-plugin-react": "^7.32.2",
+        "postcss": "^8.4.21",
+        "prettier": "^2.8.8",
+        "typescript": "*",
+        "vite": "^4.0.0"
+    },
+    "resolutions": {
+        "styled-components": "^5"
+    }
 }
