--- a/backend/grupos-partidas-apis/Dockerfile
+++ b/backend/grupos-partidas-apis/Dockerfile
@@ -1,8 +1,30 @@
-FROM openjdk:17-jdk-slim-buster
+FROM maven:3.8.4-openjdk-17-slim
+
 WORKDIR /app
+
 COPY pom.xml .
-RUN ./mvnw dependency:go-offline
-COPY src ./src
-RUN ./mvnw package -DskipTests
-CMD ["java", "-jar", "/app/target/grupos-partidas-apis-1.0.0.jar"]
+
+RUN mvn dependency:go-offline
+
+COPY . .
+
+RUN mvn package
+
+ENV JAVA_OPTS="-Dserver.port=8080"
+
+FROM maven:3.8.4-openjdk-17-slim
+
+WORKDIR /app
+
+COPY pom.xml .
+
+RUN mvn dependency:go-offline
+
+COPY . .
+
+RUN mvn package
+
+ENV JAVA_OPTS="-Dserver.port=8080"
+
+CMD java $JAVA_OPTS -jar target/grupos-partidas-apis-0.0.1-SNAPSHOT.jar
 
