--- a/backend/grupos-partidas-apis/pom.xml
+++ b/backend/grupos-partidas-apis/pom.xml
@@ -15,6 +15,8 @@
 	<description>APIs de interação com as tabelas grupos, partidas e jogador_grupo</description>
 	<properties>
 		<java.version>17</java.version>
+        <maven-pmd-plugin.version>3.20.0</maven-pmd-plugin.version>
+
 	</properties>
 	<dependencies>
 		<dependency>
@@ -71,6 +73,17 @@
 
 	<build>
 		<plugins>
+		    <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-pmd-plugin</artifactId>
+                <version>${maven-pmd-plugin.version}</version>
+                <configuration>
+                    <targetJdk>${java.source}</targetJdk>
+                    <includeTests>false</includeTests>
+                    <analysisCache>true</analysisCache>
+                    <linkXRef>false</linkXRef>
+                </configuration>
+            </plugin>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
@@ -85,5 +98,36 @@
 			</plugin>
 		</plugins>
 	</build>
+
+	<profiles>
+        <profile>
+            <id>check-cpd</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-pmd-plugin</artifactId>
+                        <configuration>
+                            <skip>false</skip>
+                            <printFailingErrors>true</printFailingErrors>
+                            <verbose>true</verbose>
+                            <minimumTokens>50</minimumTokens>                            
+                        </configuration>
+                        <executions>
+                            <execution>
+                                <id>cpd-check</id>
+                                <goals>
+                                    <goal>cpd-check</goal>
+                                </goals>
+                                <configuration>
+                                    <excludeFromFailureFile>${cpd.excludeFromFailureFile}</excludeFromFailureFile>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
 
 </project>
