--- a/backend/grupos-partidas-apis/pom.xml
+++ b/backend/grupos-partidas-apis/pom.xml
@@ -26,7 +26,8 @@
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>org.springframework.boot</groupId>
+			<groupId>org.springfr'
+				amework.boot</groupId>
 			<artifactId>spring-boot-starter-data-rest</artifactId>
 		</dependency>
 		<dependency>
