--- a/backend/grupos-partidas-apis/src/main/resources/application.properties
+++ b/backend/grupos-partidas-apis/src/main/resources/application.properties
@@ -10,6 +10,16 @@ spring.datasource.username=jlvxbvle
 spring.datasource.password=rF9T3gvdx8svG7rtC8YdP7GEGzdScpQ7
 spring.datasource.hikari.maximum-pool-size=2
 
+##HIBERNATE CONFIGS
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQL95Dialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+##HIBERNATE DEBUG
+spring.jpa.properties.hibernate.generate_statistics=true
+logging.level.org.hibernate.stat=debug
+
 ##H2
 #spring.h2.console.enabled=true
 #spring.datasource.url=jdbc:h2:mem:testdb
