--- a/backend/grupos-partidas-apis/pom.xml
+++ b/backend/grupos-partidas-apis/pom.xml
@@ -24,12 +24,6 @@
 			<artifactId>spring-boot-starter-actuator</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>org.apache.logging.log4j</groupId>
-  			<artifactId>log4j-slf4j-impl</artifactId>
-  			<version>2.14.1</version>
-		</dependency>
-
-		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
@@ -78,7 +72,17 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
         	<artifactId>spring-boot-starter-websocket</artifactId>
-    </dependency>
+    	</dependency>
+		<dependency>
+		 	<groupId>org.webjars</groupId>
+			<artifactId>sockjs-client</artifactId>
+    		<version>1.0.2</version>
+		</dependency>
+		<dependency>
+		 	<groupId>org.webjars</groupId>
+			<artifactId>stomp-websocket</artifactId>
+			<version>2.3.3</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
