:wrench: chore: configura build

--- a/backend/grupos-partidas-apis/pom.xml
+++ b/backend/grupos-partidas-apis/pom.xml
@@ -83,7 +83,17 @@
 			<artifactId>stomp-websocket</artifactId>
 			<version>2.3.3</version>
 		</dependency>
-	</dependencies>
+		 <!-- Spring Security -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+		<!-- thymeleaf --> 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-thymeleaf</artifactId>
+		</dependency>
+		</dependencies>
 	<build>
 		<plugins>
 			<plugin>
