--- a/backend/grupos-partidas-apis/src/main/resources/application.properties
+++ b/backend/grupos-partidas-apis/src/main/resources/application.properties
@@ -20,6 +20,9 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.generate_statistics=true
 logging.level.org.hibernate.stat=debug
 
+#Spring security
+logging.level.org.springframework.security=DEBUG
+
 ##H2
 #spring.h2.console.enabled=true
 #spring.datasource.url=jdbc:h2:mem:testdb
