:sparkles: feat: #163 Rename e ajuste no relacionamento de Entrada para PosicaoGrupo

--- a/backend/grupos-partidas-apis/src/main/resources/application.properties
+++ b/backend/grupos-partidas-apis/src/main/resources/application.properties
@@ -11,11 +11,13 @@ spring.datasource.password=rF9T3gvdx8svG7rtC8YdP7GEGzdScpQ7
 spring.datasource.hikari.maximum-pool-size=2
 
 ##HIBERNATE CONFIGS
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQL95Dialect
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+##spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-
+spring.jpa.properties.jakarta.persistence.schema-generation.scripts.action= drop-and-create
+spring.jpa.properties.jakarta.persistence.schema-generation.scripts.create-target= target/create.sql
+spring.jpa.properties.jakarta.persistence.schema-generation.scripts.drop-target= target/drop.sql
 ##HIBERNATE DEBUG
 spring.jpa.properties.hibernate.generate_statistics=true
 logging.level.org.hibernate.stat=debug
