--- a/backend/grupos-partidas-apis/pom.xml
+++ b/backend/grupos-partidas-apis/pom.xml
@@ -80,7 +80,7 @@
 		</dependency>
 		<dependency>
 		 	<groupId>org.webjars</groupId>
-			<artifactId>stomp-websocket</artifactId>
+			<artifactId>stomp-'websocket'</artifactId>
 			<version>2.3.3</version>
 		</dependency>
 	</dependencies>
