--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -13,6 +13,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
+    - name: Login to DockerHub
+      uses: docker/login-action@v1
+      with:
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_ACCESS_TOKEN }}
     - name: Build and push Docker image
       uses: docker/build-push-action@v2
       with:
@@ -23,4 +28,4 @@ jobs:
     - name: Pull and tag the Docker image
       run: |
         docker pull ruanfk2023/grupos-partidas-apis
-        docker tag ruanfk2023/grupos-partidas-apis grupos-partidas-apis:$(date +%s)
+        docker tag ruanfk2023/grupos-partidas-apis grupos-partidas-apis:$(date +%s
