:bricks: ci: adiciona aplicativo Web

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -29,3 +29,10 @@ jobs:
       run: |
         docker pull ruanfk2023/grupos-partidas-apis
         docker tag ruanfk2023/grupos-partidas-apis grupos-partidas-apis:$(date +%s)
+    - name: Deploy to Azure Web App
+      uses: azure/webapps-deploy@v2
+      with:
+        app-name: 'botafogo'
+        slot-name: 'production'
+        publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
+        package: ./backend/grupos-partidas-apis
