:ci: :bricks: Adiciona artefato do frontend

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -29,6 +29,17 @@ jobs:
       run: |
         docker pull ruanfk2023/grupos-partidas-apis
         docker tag ruanfk2023/grupos-partidas-apis grupos-partidas-apis:$(date +%s)
+    - name: Build and push Frontend docker image
+      uses: docker/build-push-action@v2
+      with:
+        context: ./frontend
+        file: ./frontend/Dockerfile
+        push: true
+        tags: ruanfk2023/frontend:latest
+    - name: Pull and tag the Docker image
+      run: |
+        docker pull ruanfk2023/frontend
+        docker tag ruanfk2023/frontend frontend:$(date +%s)
     - name: Deploy to Azure Web App
       uses: azure/webapps-deploy@v2
       with:
