test: Adiciona permissão de escrita

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -42,6 +42,7 @@ jobs:
         docker tag ruanfk2023/frontend frontend:$(date +%s)
     - name: Run Spring unit tests
       run: |
+        chmod +x ./backend/grupos-partidas-apis/mvnw
         cd ./backend/grupos-partidas-apis && ./mvnw test
     - name: Deploy to Azure Web App
       uses: azure/webapps-deploy@v2
