--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -40,7 +40,17 @@ jobs:
       run: |
         docker pull ruanfk2023/frontend
         docker tag ruanfk2023/frontend frontend:$(date +%s)
-    - name: Run Spring unit tests
+
+    - name: Build Docker image for testing
+      uses: docker/build-push-action@v2
+      with:
+        context: ./backend/grupos-partidas-apis
+        file: ./backend/grupos-partidas-apis/Dockerfile # Use a separate Dockerfile for testing.
+        tags: ruanfk2023/grupos-partidas-apis:latest
+    - name: Run unit tests in Docker container
+      run: |
+        docker run --rm my-app:test mvn test # Run the tests inside the container.
+
       run: |
         chmod +x ./backend/grupos-partidas-apis/mvnw
         cd ./backend/grupos-partidas-apis && ./mvnw test
