--- a/backend/grupos-partidas-apis/src/main/resources/templates/frontend-chat/package.json
+++ b/backend/grupos-partidas-apis/src/main/resources/templates/frontend-chat/package.json
@@ -19,6 +19,8 @@
   "devDependencies": {
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
+    "@types/sockjs-client": "^1.5.1",
+    "@types/stompjs": "^2.3.5",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
     "@typescript-eslint/parser": "^5.59.0",
     "@vitejs/plugin-react": "^4.0.0",
