:bug: fix: adiciona construtor em Jogadores e ajusta padrão rest para serviço /jogadores

--- a/backend/grupos-partidas-apis/src/main/resources/application.properties
+++ b/backend/grupos-partidas-apis/src/main/resources/application.properties
@@ -12,12 +12,12 @@ spring.datasource.hikari.maximum-pool-size=2
 
 ##HIBERNATE CONFIGS
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
-##spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.jakarta.persistence.schema-generation.scripts.action= drop-and-create
-spring.jpa.properties.jakarta.persistence.schema-generation.scripts.create-target= target/create.sql
-spring.jpa.properties.jakarta.persistence.schema-generation.scripts.drop-target= target/drop.sql
+##spring.jpa.properties.jakarta.persistence.schema-generation.scripts.action= drop-and-create
+##spring.jpa.properties.jakarta.persistence.schema-generation.scripts.create-target= target/create.sql
+##spring.jpa.properties.jakarta.persistence.schema-generation.scripts.drop-target= target/drop.sql
 ##HIBERNATE DEBUG
 spring.jpa.properties.hibernate.generate_statistics=true
 logging.level.org.hibernate.stat=debug
