--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
         "axios": "^1.2.3",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-multi-carousel": "^2.8.4",
         "react-redux": "^8.0.5",
         "react-router-dom": "^6.7.0",
         "redux": "^4.2.0",
